--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
+.images {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0;
+  width: 700px;
+  margin: auto; /*centra*/
+}
 
+.images img {
+  width: 100%;
+  aspect-ratio: 1 / 1;  /*adatta larghezza e altezza*/
+  object-fit: cover; /*riempie tutti gli spazi*/
+  display: block;
+}
