--- a/style.css
+++ b/style.css
@@ -1,14 +1,45 @@
+@font-face {
+  font-family: 'Bubblegum';
+  src: url(bubblegum/Bubblegum.ttf) format('truetype');
+}
+body{
+  margin: 0;
+  background-image: url(img/sfondo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  font-family: 'Bubblegum', sans-serif;
+  font-size: 20px;
+}
+.header{
+  padding: 20px;
+  background-color: black;
+  text-align: center;
+  margin: auto;
+}
+.container{
+  display:flex;
+  justify-content: space-around;
+  margin: 20px;
+}
 .images {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 0;
-  width: 700px;
-  margin: auto; /*centra*/
+  gap: 5px;
+  width: 600px;
+  margin: auto; 
 }
-
 .images img {
   width: 100%;
   aspect-ratio: 1 / 1;  /*adatta larghezza e altezza*/
   object-fit: cover; /*riempie tutti gli spazi*/
   display: block;
+}
+.panel{
+  text-align: center;
+  margin: auto 0;
+  background-color: black;
+  padding: 50px;
+  border: 5px solid black;
+  border-radius: 15px;
 }
