--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
   color: white;
   font-family: 'Bubblegum', sans-serif;
   font-size: 20px;
+  overflow-y: hidden;
 }
 .header{
   padding: 20px;
@@ -39,7 +40,8 @@ body{
   text-align: center;
   margin: auto 0;
   background-color: black;
-  padding: 60px;
+  padding: 50px;
+  padding-bottom: 20px;
   border: 5px solid black;
   border-radius: 20px;
 }
