--- a/style.css
+++ b/style.css
@@ -2,11 +2,17 @@
   font-family: 'Bubblegum';
   src: url(bubblegum/Bubblegum.ttf) format('truetype');
 }
+/*Attributi impostati in modo da rendere il sito utilizzabile anche su mobile*/
 html{
   width: 100%;
+  margin: 0;
+  padding: 0;
+  min-height: 100svh; /*100svh per evitare problemi di overflow su mobile, valido anche sul body*/
 }
 body{
   margin: 0;
+  padding: 0;
+  min-height: 100svh;
   background-image: url(img/light-sfondo.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -39,14 +45,15 @@ body{
   padding: 17px;
   grid-template-columns: repeat(3, 1fr);
   gap: 5px;
-  width: 600px;
+  width: 550px;
   margin: auto; 
 }
-.images img {
+.images img{
   width: 100%;
   aspect-ratio: 1 / 1;  /*adatta larghezza e altezza*/
   object-fit: cover; /*riempie tutti gli spazi*/
   display: block;
+  border-radius: 15px;
 }
 .panel{
   text-align: center;
@@ -64,6 +71,7 @@ body{
   flex-direction: column;
   padding: 26px;
   padding-bottom: 20px;
+  padding-top: 10px;
   text-align: center;
   background-color: black;
   border: 5px solid black;
@@ -498,7 +506,7 @@ body{
   }
 
   .images { 
-    width: 60%; 
+    width: 80%; 
   }
 
   .panel{
@@ -528,10 +536,12 @@ body{
 
   html {
     width: 100%;
+    height: auto;
   }
 
   body {
     overflow-y: auto; 
+    height: auto;
   }
 }
 
