--- a/style.css
+++ b/style.css
@@ -122,8 +122,63 @@ body{
 #TestImage:hover{
   transform: scale(1.1);
 }
-#ButtonRestart{
+#ButtonRestart {
+  border: 0 solid;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #000;
+  background-image: none;
+  color: #fff;
   cursor: pointer;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  font-weight: 900;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
+  text-transform: uppercase;
+  border-radius: 99rem;
+  border-width: 2px;
+  overflow: hidden;
+  padding: 0.8rem 3rem;
+  position: relative;
+}
+
+#ButtonRestart:after, 
+#ButtonRestart:before {
+  background: linear-gradient(
+    90deg,
+    #fff 25%,
+    transparent 0,
+    transparent 50%,
+    #fff 0,
+    #fff 75%,
+    transparent 0
+  );
+  content: "";
+  inset: 0;
+  position: absolute;
+  transform: translateY(var(--progress, 100%));
+  transition: transform 0.2s ease;
+}
+
+#ButtonRestart:hover:after, 
+#ButtonRestart:hover:before {
+  --progress: 0;
+}
+
+#ButtonRestart:hover {
+  background-color: white;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+#ButtonRestart {
+  font-size: 18px;
 }
 
 .theme-switch {
